# TaScaaS

./: README.md  serverless.yml
api/: api-gateway.yaml
examples/: README.md
examples/pi/: CMakeLists.txt  pi-launch  pi.cpp  piTest.config
examples/prime/: filesTest.config  genFiles.sh  processFile  processFiles-launch
lambda/: LB.py  configuration.py  data.py  dispatcher.py
server/: CMakeLists.txt  stdinServer.cpp
worker/: worker.py
